--- a/11_25.md
+++ b/11_25.md
@@ -1,6 +1,6 @@
 ### 基本圖片分類
 
-'''
+```
 # TensorFlow and tf.keras
 import tensorflow as tf
 
@@ -8,6 +8,20 @@ import tensorflow as tf
 import numpy as np
 import matplotlib.pyplot as plt
 print(tf.__version__)
+```
 
+## Import the Fashion MNIST dataset
 
-'''
+```
+fashion_mnist = tf.keras.datasets.fashion_mnist
+(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()
+```
+
+# boston_housing module: Boston housing price regression dataset.	房屋價格回歸數據集
+
+1. cifar10 module: CIFAR10 small images classification dataset.	小圖像分類數據集
+2. cifar100 module: CIFAR100 small images classification dataset.	小圖像分類數據集
+3. fashion_mnist module: Fashion-MNIST dataset.			 Fashion-MNIST數據集
+4. imdb module: IMDB sentiment classification dataset. 		IMDB情感分類數據集
+5. mnist module: MNIST handwritten digits dataset.		 MNIST手寫數字數據集
+6. reuters module: Reuters topic classification dataset.		路透社主題分類數據集
