--- a/11_25.md
+++ b/11_25.md
@@ -25,4 +25,4 @@ fashion_mnist = tf.keras.datasets.fashion_mnist
 4. imdb module: IMDB sentiment classification dataset. 		IMDB情感分類數據集
 5. mnist module: MNIST handwritten digits dataset.		 MNIST手寫數字數據集
 6. reuters module: Reuters topic classification dataset.		路透社主題分類數據集
-<https://www.tensorflow.org/api_docs/python/tf/keras/datasets>
+url. <https://www.tensorflow.org/api_docs/python/tf/keras/datasets>
