--- a/11_25.md
+++ b/11_25.md
@@ -1,6 +1,10 @@
 ### 基本圖片分類
 
 ```
+model.summery()
+```
+
+```
 # TensorFlow and tf.keras
 import tensorflow as tf
 
@@ -17,13 +21,39 @@ fashion_mnist = tf.keras.datasets.fashion_mnist
 (train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()
 ```
 
-# boston_housing module: Boston housing price regression dataset.	房屋價格回歸數據集
-
-1. cifar10 module: CIFAR10 small images classification dataset.	小圖像分類數據集
-2. cifar100 module: CIFAR100 small images classification dataset.	小圖像分類數據集
-3. fashion_mnist module: Fashion-MNIST dataset.			 Fashion-MNIST數據集
-4. imdb module: IMDB sentiment classification dataset. 		IMDB情感分類數據集
-5. mnist module: MNIST handwritten digits dataset.		 MNIST手寫數字數據集
-6. reuters module: Reuters topic classification dataset.		路透社主題分類數據集
----
+# tf.keras.datasets.fashionmnist
+1. boston_housing module: Boston housing price regression dataset.	房屋價格回歸數據集
+2. cifar10 module: CIFAR10 small images classification dataset.	小圖像分類數據集
+3. cifar100 module: CIFAR100 small images classification dataset.	小圖像分類數據集
+4. fashion_mnist module: Fashion-MNIST dataset.			 Fashion-MNIST數據集
+5. imdb module: IMDB sentiment classification dataset. 		IMDB情感分類數據集
+6. mnist module: MNIST handwritten digits dataset.		 MNIST手寫數字數據集
+7. reuters module: Reuters topic classification dataset.		路透社主題分類數據集
 <https://www.tensorflow.org/api_docs/python/tf/keras/datasets>
+---
+```
+class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',
+               'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']
+```
+
+## Explore the data(探索數據)
+```
+train_images.shape
+
+len(train_labels)
+
+train_labels
+
+test_images.shape
+
+len(test_labels)
+```
+
+## Preprocess the data(預處理資料)
+```
+plt.figure()
+plt.imshow(train_images[0])
+plt.colorbar()
+plt.grid(False)
+plt.show()
+```
