--- a/11_25.md
+++ b/11_25.md
@@ -48,6 +48,10 @@ test_images.shape
 
 len(test_labels)
 ```
+#
+1. shape 通常用於獲取數組的當前形狀
+2. len 用來返回對象的長度或項目數
+
 
 ## Preprocess the data(預處理資料)
 ```
@@ -57,4 +61,11 @@ plt.colorbar()
 plt.grid(False)
 plt.show()
 ```
+#
+1. figure 創建一個新圖形，或激活一個現有圖形。
+2. imshow 將數據顯示為圖像
+3. colorbar 添加顏色條(漸變色條)
+4. grid 配置網格線
+<https://matplotlib.org/>
+---
 ![](/pag/20201125_1.png)
